--- a/KeepingRunning/AndroidManifest.xml
+++ b/KeepingRunning/AndroidManifest.xml
@@ -7,25 +7,33 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />    
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    
-    <uses-permission android:name="android.permission.INTERNET" />    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />    
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />    
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />    
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
-    
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+	<uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
+
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote">
+		</service>
+
         <activity
-            android:name="com.project.keepingrunning.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
+            android:name="com.project.keepingrunning.HomeActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,9 +41,20 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="com.project.keepingrunning.map.PathMapActivity">
-            
+        <activity
+            android:name="com.project.keepingrunning.RunTypeActivity"
+            android:label="@string/title_activity_run_type"
+            android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
         </activity>
+        
+        <activity android:name="com.project.keepingrunning.map.PathMapActivity" >
+        </activity>
+        
+        <activity
+            android:name="com.project.keepingrunning.RunningActivity"
+            android:label="@string/title_activity_running" >
+        </activity>
+        
     </application>
 
 </manifest>
