--- a/KeepingRunning/AndroidManifest.xml
+++ b/KeepingRunning/AndroidManifest.xml
@@ -33,7 +33,9 @@
 
         <activity
             android:name="com.project.keepingrunning.HomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@style/Theme.Sherlock.Light.DarkActionBar" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,15 +46,20 @@
         <activity
             android:name="com.project.keepingrunning.RunTypeActivity"
             android:label="@string/title_activity_run_type"
-            android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
+            android:theme="@style/Theme.Sherlock.Light.DarkActionBar" 
+            android:screenOrientation="portrait">
         </activity>
         
-        <activity android:name="com.project.keepingrunning.map.PathMapActivity" >
+        <activity 
+            android:name="com.project.keepingrunning.map.PathMapActivity"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="com.project.keepingrunning.RunningActivity"
-            android:label="@string/title_activity_running" >
+            android:label="@string/title_activity_running" 
+            android:theme="@style/Theme.Sherlock.Light.DarkActionBar" 
+            android:screenOrientation="portrait">
         </activity>
         
     </application>
